--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "role-acl",
+  "name": "@kyrisu/access-control",
   "version": "4.5.4",
   "description": "Role, Attribute and Condition based Access Control for Node.js",
   "main": "./index.js",
@@ -22,7 +22,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/tensult/role-acl.git"
+    "url": "git+https://github.com/kyrisu/access-control.git"
   },
   "keywords": [
     "access",
@@ -44,12 +44,12 @@
     "glob",
     "wildcard"
   ],
-  "author": "Dilip Kola <dilip@tensult.com>",
+  "author": "kyrisu <kyrisu@kyrisu.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/tensult/role-acl/issues"
+    "url": "https://github.com/kyrisu/access-control/issues"
   },
-  "homepage": "https://github.com/tensult/role-acl#readme",
+  "homepage": "https://github.com/kyrisu/access-control#readme",
   "devDependencies": {
     "@types/jasmine": "^3.3.0",
     "@types/lodash.clonedeep": "^4.5.6",
