--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kyrisu/access-control",
-  "version": "4.5.4",
+  "version": "5.0.0",
   "description": "Role, Attribute and Condition based Access Control for Node.js",
   "main": "./index.js",
   "directories": {
@@ -18,7 +18,8 @@
     "prepare": "npm run build",
     "test": "ts-node ./node_modules/jasmine/bin/jasmine.js JASMINE_CONFIG_PATH=jasmine.json",
     "test:coverage": "./node_modules/istanbul/lib/cli.js cover -e .ts  -x \"*.d.ts\" -x \"*.spec.ts\" ts-node node_modules/jasmine/bin/jasmine.js -- JASMINE_CONFIG_PATH=jasmine.json",
-    "webpack": "webpack"
+    "webpack": "webpack",
+    "release": "standard-version"
   },
   "repository": {
     "type": "git",
@@ -63,6 +64,7 @@
     "mkdirp": "^0.5.1",
     "ncp": "^2.0.0",
     "rimraf": "^2.6.1",
+    "standard-version": "^9.5.0",
     "ts-node": "^8.8.2",
     "typescript": "^3.8.3",
     "webpack": "^4.42.1"
