feat: first deploymet

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@proxaai/access-control",
   "version": "6.0.4",
-  "description": "Role, Attribute and Condition based Access Control for Node.js",
+  "description": "Role, Attribute and Condition based Access Control for Node.js.",
   "main": "./index.js",
   "directories": {
     "lib": "./lib",
